Cambio del valor del boton de los formuularios de alta. De Aceptar a Guardar.

--- a/src/app/arqueo-caja/arqueo-caja-new/arqueo-caja-new.component.html
+++ b/src/app/arqueo-caja/arqueo-caja-new/arqueo-caja-new.component.html
@@ -66,7 +66,7 @@
 
         <div class="12u$">
           <ul class="actions" align="center">
-            <li><input [disabled]="(form.invalid || hasCashRegister)" type="submit" value="Aceptar" class="special" (click)="validate()"/></li>
+            <li><input [disabled]="(form.invalid || hasCashRegister)" type="submit" value="Guardar" class="special" (click)="validate()"/></li>
             <li><input type="reset" value="Atras" (click)='onBack()' /></li>
           </ul>
         </div>    
