--- a/src/app/cash-register/cash-register-new/cash-register-new.component.html
+++ b/src/app/cash-register/cash-register-new/cash-register-new.component.html
@@ -52,7 +52,7 @@
   
           <div class="">
             <ul class="actions" align="center">
-              <li><input [disabled]="cashRegisterForm.invalid" type="submit" value="Aceptar" class="special" (click)="saveCashRegister()"/></li>
+              <li><input [disabled]="cashRegisterForm.invalid" type="submit" value="Guardar" class="special" (click)="saveCashRegister()"/></li>
               <li><input (click)="showModalCancel(cancelTemplate)" type="button" value="Cancel" /></li>
             </ul>
           </div>    
