--- a/src/app/client-account-transactions/transaction-new/transaction-new.component.html
+++ b/src/app/client-account-transactions/transaction-new/transaction-new.component.html
@@ -90,7 +90,7 @@
   
           <div class="12u$">
             <ul class="actions" align="center">
-              <li><input [disabled]="(form.invalid || hasCashRegister || hasClient || hasPaymentType)" type="submit" value="Aceptar" class="special" (click)="saveTransaction()"/></li>
+              <li><input [disabled]="(form.invalid || hasCashRegister || hasClient || hasPaymentType)" type="submit" value="Guardar" class="special" (click)="saveTransaction()"/></li>
               <li><input type="reset" value="Atras" (click)='onBack()' /></li>
             </ul>
           </div>    
