--- a/src/app/menu/menu-new/menu-new.component.html
+++ b/src/app/menu/menu-new/menu-new.component.html
@@ -41,7 +41,7 @@
 
         <div class="12u$">
           <ul class="actions" align="center">
-            <li><input [disabled]="form.invalid" type="submit" value="Aceptar" class="special" (click)="saveMenu(newMenu)"/></li>
+            <li><input [disabled]="form.invalid" type="submit" value="Guardar" class="special" (click)="saveMenu(newMenu)"/></li>
             <li><input type="reset" value="Atras" (click)='onBack()' /></li>
           </ul>
         </div>    
