--- a/src/app/payment-type/payment-type-new/payment-type-new.component.html
+++ b/src/app/payment-type/payment-type-new/payment-type-new.component.html
@@ -45,7 +45,7 @@
           <div class="modal-footer">
             <div class="options">
               <button class="btn btn-primary waves-light" type="button"  value="Cancel" (click)="showModalCancel(cancelTemplate)" mdbRippleRadius>Cancelar</button>
-              <button class="btn btn-primary waves-light" [disabled]="paymentTypeForm.invalid" type="button" value="Aceptar" (click)="savePaymentType()" mdbRippleRadius>Aceptar</button>
+              <button class="btn btn-primary waves-light" [disabled]="paymentTypeForm.invalid" type="button" value="Guardar" (click)="savePaymentType()" mdbRippleRadius>Aceptar</button>
             </div>
           </div>
         </form>
