--- a/src/app/product/product-new/product-new.component.html
+++ b/src/app/product/product-new/product-new.component.html
@@ -172,7 +172,7 @@
       </div>
       <div class="row col-md-2 col-lg-2 col-xl-3 col-sm-2">
         <button class="btn btn-md btn-primary" type="reset" (click)='onBack()'>Atras</button> 
-        <button class="btn btn-md btn-primary" [disabled]="productForm.invalid" type="submit" (click)="saveProduct()">Aceptar</button>
+        <button class="btn btn-md btn-primary" [disabled]="productForm.invalid" type="submit" (click)="saveProduct()">Guardar</button>
       </div>    
     </form>
 </div>      
