--- a/src/app/section/section-new/section-new.component.html
+++ b/src/app/section/section-new/section-new.component.html
@@ -40,7 +40,7 @@
           </div>
           <div class="modal-footer justify-content-center">
               <button type="button" class="btn btn-secondary waves-light" data-dismiss="modal" (click)="fluid.hide()" mdbRippleRadius>Close</button>
-              <button type="button" class="btn btn-primary waves-light" mdbRippleRadius (click)="saveSection()" >Save changes</button>
+              <button type="button" class="btn btn-primary waves-light" mdbRippleRadius (click)="saveSection()" >Guardar</button>
           </div>
       </div>
   </div>
