--- a/src/app/cash-flows/cash-flows-new/cash-flows-new.component.html
+++ b/src/app/cash-flows/cash-flows-new/cash-flows-new.component.html
@@ -90,7 +90,7 @@
 
         <div class="12u$">
           <ul class="actions" align="center">
-            <li><input [disabled]="(form.invalid || hasCashRegister || hasType || hasPaymentType)" type="submit" value="Aceptar" class="special" (click)="saveCashFlow()"/></li>
+            <li><input [disabled]="(form.invalid || hasCashRegister || hasType || hasPaymentType)" type="submit" value="Guardar" class="special" (click)="saveCashFlow()"/></li>
             <li><input type="reset" value="Atras" (click)='onBack()' /></li>
           </ul>
         </div>    
