--- a/src/app/category/category-new/category-new.component.html
+++ b/src/app/category/category-new/category-new.component.html
@@ -58,7 +58,7 @@
 
         <div class="12u$">
           <ul class="actions" align="center">
-            <li><input [disabled]="(form.invalid || hasCategory)" type="submit" value="Aceptar" class="special" (click)="saveCategory()"/></li>
+            <li><input [disabled]="(form.invalid || hasCategory)" type="submit" value="Guardar" class="special" (click)="saveCategory()"/></li>
             <li><input type="reset" value="Atras" (click)='onBack()' /></li>
           </ul>
         </div>    
