Se valida que una caja no tenga arqueos abiertos cuando la misma se cambia a estado no disponible

--- a/src/app/cash-register/cash-register-edit/cash-register-edit.component.html
+++ b/src/app/cash-register/cash-register-edit/cash-register-edit.component.html
@@ -57,6 +57,10 @@
               <span class="custom-control-description">Caja por defecto</span>
             </label>
           </div>
+
+          <div *ngIf="errorArqueo === true" class="alert alert-danger">
+            {{ errorMsg }}
+          </div>   
   
           <div class="">
             <ul class="actions" align="center">
