Se cambiaron nombre de los metodos

--- a/src/app/cash-register/cash-register-edit/cash-register-edit.component.html
+++ b/src/app/cash-register/cash-register-edit/cash-register-edit.component.html
@@ -64,7 +64,7 @@
   
           <div class="">
             <ul class="actions" align="center">
-              <li><input [disabled]="cashRegisterForm.invalid" type="submit" value="Aceptar" class="special" (click)="updateCashRegister()"/></li>
+              <li><input [disabled]="cashRegisterForm.invalid" type="submit" value="Aceptar" class="special" (click)="validate()"/></li>
               <li><input (click)="showModalCancel(cancelTemplate)" type="button" value="Cancel" /></li>
             </ul>
           </div>    
