--- a/src/app/table/table-list/table-list.component.html
+++ b/src/app/table/table-list/table-list.component.html
@@ -1,4 +1,4 @@
-<ng-template #deleteTemplate>
+<ng-template #openNewOrderTemplate>
   <div class="modal-header primary-color">
     <h4 class="modal-title text-white">Nuevo pedido</h4>
   </div>
@@ -25,14 +25,28 @@
     <button type="button" class="button special" (click)="closeModal()">Cancel</button>
   </div>
 </ng-template>
+
+<ng-template #deleteTemplate>
+  <div class="modal-header">
+    <h4 class="modal-title">Eliminar Mesa</h4>
+  </div>
+  <div class="modal-body">
+    ¿Estas seguro que desea eliminar esta mesa?
+  </div>
+  <div class="modal-footer">
+    <button type="button" class="button special" (click)="deleteTable()">Ok</button>
+    <button type="button" class="button special" (click)="closeModal()">Cancel</button>
+  </div>
+</ng-template>
 <!-- Grid Tables -->
 
 <div class="row">
 <div class="container-fluid">  
   <div class="rounded z-depth-2 blue-grey lighten-4 fix" [ngGrid]="gridConfig">
     <div *ngFor="let box of boxes; let i = index" [(ngGridItem)]="box.config" (onItemChange)="updateItem(i, $event)" (onResize)="onResize(i, $event)" (onDrag)="onDrag(i, $event)">
-      <div class="handle z-depth-3 card accent-4 text-center hoverable" (click)="showOpenOrderModal(deleteTemplate,box.id)" [class.green]="box.status === 'Libre'" [class.red]="box.status === 'Ocupada'" [class.yellow]="box.status === 'Comandada'" [class.blue]="box.status === 'Reservada'"> 
-      <div class="text-right customCloseCursor" style="position: static;"  *ngIf = "settingsActive === true">
+      <div class="handle z-depth-3 card accent-4 text-center hoverable" (click)="showOpenOrderModal(openNewOrderTemplate, box.id)" [class.green]="box.status === 'Libre'" [class.red]="box.status === 'Ocupada'" [class.yellow]="box.status === 'Comandada'" [class.blue]="box.status === 'Reservada'"> 
+      <div class="text-right customCloseCursor" style="position: static;"  *ngIf = "settingsActive === true" 
+           (click)="showDeleteModal(deleteTemplate, box.id)">
         <span aria-hidden="true" class="close pr-2 mr-1 ml-1 pl-1 mt-1 mb-1 pb-1 pt-1">&times;</span>
       </div>
         <div class="card-body child">
