--- a/src/app/section/section-list/section-list.component.html
+++ b/src/app/section/section-list/section-list.component.html
@@ -1,16 +1,3 @@
-<ng-template #deleteTemplate>
-  <div class="modal-header">
-    <h4 class="modal-title">Eliminar Sala</h4>
-  </div>
-  <div class="modal-body">
-    ¿Seguro desea eliminar esta sala y todas sus mesas?
-  </div>
-  <div class="modal-footer">
-    <button type="button" class="button special" (click)="deleteSection()">Ok</button>
-    <button type="button" class="button special" (click)="closeModal()">Cancel</button>
-  </div>
-</ng-template>
-
 <!-- Nav tabs -->
 <div class="pageTitle" *ngIf='sections.length === 0'>
   <div style="float: left">
@@ -23,17 +10,16 @@
   </div>
 </div>
 <div class="col-md-12 col-lg-12 col-sm-12 row stylish-color customLinksColor mr-0 ml-0 pr-0 pl-0">
-  <div class="col-md-6 col-lg-6 col-sm-6 mr-0 ml-0 pr-0 pl-0">
+  <div class="col-md-7 col-lg-7 col-sm-7 mr-0 ml-0 pr-0 pl-0">
     <ul class="nav classic-tabs stylish-color customLinksColor" *ngIf='sections.length !== 0'>
       <li *ngFor='let section of sections; let i=index' class="nav-item customFirstLi">
-        <a class="waves-effect" id="{{ 'tab' + i }}" [routerLink] ="['tables', section._id]" routerLinkActive="active" 
-            (click) = setActiveSection(section)>
+        <a class="waves-effect" id="{{ 'tab' + i }}" [routerLink] ="['tables', section._id]" routerLinkActive="active">
               {{section.name}}
         </a>
       </li>
     </ul>
   </div>
-  <div class="col-md-3 col-lg-3 col-sm-3 center-pills mr-0 ml-0 pr-3 pl-0">
+  <div class="col-md-4 col-lg-4 col-sm-4 center-pills mr-0 ml-0 pr-4 pl-0">
     <div class="float-right">
       <span class="badge badge-pill green">Libre</span>
       <span class="badge badge-pill red ">Ocupada</span>
@@ -41,17 +27,9 @@
       <span class="badge badge-pill blue">Reservada</span>
     </div>      
   </div>
-  <div class="col-md-1 col-lg-1 col-sm-1 mr-0 ml-0 pr-0 pl-0 customButtonAlternative" *ngIf='activeSection != null'>
-    <a (click) = "showModalDelete(deleteTemplate, activeSection)" class="btn btn-primary btn-sm waves-light customButton">- Eliminar Sala</a>
-  </div>
-
-  <div class="col-md-1 col-lg-1 col-sm-1 mr-0 ml-0 pr-0 pl-0" *ngIf='settingsActive === true'>
-    <app-section-edit class='float-right customButton' ></app-section-edit>
-  </div>
   <div class="col-md-1 col-lg-1 col-sm-1 mr-0 ml-0 pr-0 pl-0" *ngIf='settingsActive === true'>
     <app-section-new class="float-right customButton" (notifyParent)="reloadSections($event)"></app-section-new>
   </div>
- 
 </div>
 <!-- Tab panels -->
 <div class="tab-content customContentCard">
