--- a/src/app/section/section-list/section-list.component.html
+++ b/src/app/section/section-list/section-list.component.html
@@ -1,5 +1,5 @@
 <!-- Nav tabs -->
-<div class="pageTitle" *ngIf='sections.length === 0'>
+<div class="pageTitle">
   <div style="float: left">
       <header class="major">
               <h5>Configuracion de secciones y mesas</h5>
