--- a/src/app/section/section-list-config/section-list-config.component.html
+++ b/src/app/section/section-list-config/section-list-config.component.html
@@ -20,40 +20,40 @@
         <a [routerLink]="['/settings/general/sections', { outlets: { edit: ['newSection'] } }]" 
                class="btn btn-primary btn-sm waves-light customButton" mdbRippleRadius> + Nueva Sala
         </a>
-        <div class="row ml-1">
-          <div class="col-md-8 col-lg-8 col-sm-8 pl-5 pr-5 pt-1 pb-2 mt-2 text-center">
-            <div class="row mb-2 customBox">
-                <form #form="ngForm" novalidate class="form-inline col-md-12 col-lg-12">
-                    <h6 class="pt-2">Filtrar:</h6>
-                    <div class="md-form form-group mr-0 ml-0 col-md-3 col-lg-3">
-                        <input type="text" class="input-alternate" placeholder="Nombre"  name="query" [(ngModel)]='listFilter' id="query" >
-                    </div>          
-                </form>    
-            </div>
-            <div class="row">
-              <table class="table table-bordered table-hover customTable">
-                <thead class="primary-color customTableText">
-                  <tr>
-                    <th>Nombre</th>
-                    <th>Acciones</th>
-                  </tr>
-                </thead>
-                <tbody class="table-wrapper" *ngIf='sections && sections.length'>
-                  <tr *ngFor = 'let section of filteredSections ' >
-                      <td>{{ section.name }}</td>
-                      <td class="align-middle">
-                          <a [routerLink]="['/settings/general/sections', { outlets: { edit: ['editSection', section._id] } }]" 
-                              class="btn btn-yellow btn-sm customButtonText">Editar</a>
-                          <a (click) = "showModalDelete(deleteTemplate, section._id)" class="btn btn-red btn-sm">Eliminar</a>
-                      </td>
-                  </tr>
-                </tbody>
-              </table>
-            </div>
-          </div>
-          <div class="col-md-4 col-lg-4 col-sm-4 mr-0 pr-5 pt-1 pb-2 mt-2">
+    </div>
+    <div class="row ml-1">
+        <div class="col-md-8 col-lg-8 col-sm-8 pl-5 pr-5 pt-1 pb-2 mt-2 text-center">
+        <div class="row mb-2 customBox">
+            <form #form="ngForm" novalidate class="form-inline col-md-12 col-lg-12">
+                <h6 class="pt-2">Filtrar:</h6>
+                <div class="md-form form-group mr-0 ml-0 col-md-3 col-lg-3">
+                    <input type="text" class="input-alternate" placeholder="Nombre"  name="query" [(ngModel)]='listFilter' id="query" >
+                </div>          
+            </form>    
+        </div>
+        <div class="row">
+            <table class="table table-bordered table-hover customTable">
+            <thead class="primary-color customTableText">
+                <tr>
+                <th>Nombre</th>
+                <th>Acciones</th>
+                </tr>
+            </thead>
+            <tbody class="table-wrapper" *ngIf='filteredSections && filteredSections.length'>
+                <tr *ngFor = 'let section of filteredSections ' >                      
+                    <td>{{ section.name }}</td>
+                    <td class="align-middle">
+                        <a [routerLink]="['/settings/general/sections', { outlets: { edit: ['editSection', section._id] } }]" 
+                            class="btn btn-yellow btn-sm customButtonText">Editar</a>
+                        <a (click) = "showModalDelete(deleteTemplate, section._id)" class="btn btn-red btn-sm">Eliminar</a>
+                    </td>
+                </tr>
+            </tbody>
+            </table>
+        </div>
+        </div>
+        <div class="col-md-4 col-lg-4 col-sm-4 mr-0 pr-5 pt-1 pb-2 mt-2">
             <router-outlet name="edit" (deactivate)='reloadItems($event)'></router-outlet>
-          </div>
         </div>
     </div>
   </div>
