Se corrigen errores en el file input. Se agrega funcionalidad para que se valide correctamente el formulario de productos y se agrega funcionalidad para que se inserte en la DB el nombre de la imagen junto con el producto.

--- a/src/app/product/product-new/product-new.component.html
+++ b/src/app/product/product-new/product-new.component.html
@@ -80,7 +80,10 @@
               </div>        
             </div> 
           </div>
-          <app-file-input [type]="'img'" [subtype]="'product'"></app-file-input>
+          <app-file-input (validator)="onNotified($event)" [type]="'img'" [subtype]="'product'"></app-file-input>
+          <div *ngIf="validPicture == false && pictureTouched == true" class="alert alert-danger">
+            La imagen del producto es requerida.
+          </div>       
         </div> 
         <div class="col-md-6 pr-0 pl-0">
             <img onerror="this.src='../../../assets/img/No_image_available.svg'"/>               
