--- a/src/app/category/category-new/category-new.component.html
+++ b/src/app/category/category-new/category-new.component.html
@@ -46,15 +46,10 @@
           El Menu de la Categoría es requerido.
         </div>
 
-        <div class="form-group">
-          <label>Imagen Categoría:</label>
-          <input #categoryPic="ngModel" required type="text" class="form-control" [class.is-invalid]="categoryPic.invalid && (categoryPic.dirty || categoryPic.touched)" name="categoryPic" 
-                id="categoryPic" [(ngModel)]="newCategory.picture">
-        </div>
-
-        <div *ngIf="categoryPic.invalid && (categoryPic.dirty || categoryPic.touched)" class="alert alert-danger">
-          La imagen de la categoría es requerida.
-        </div>    
+        <app-file-input (validator)="onNotified($event)" [type]="'img'" [subtype]="'category'"></app-file-input>
+          <div *ngIf="validPicture == false && pictureTouched == true" class="alert alert-danger">
+            La imagen de la categoria es requerida.
+          </div>           
 
         <div class="12u$">
           <ul class="actions" align="center">
