--- a/src/app/product/product-modify/product-modify.component.html
+++ b/src/app/product/product-modify/product-modify.component.html
@@ -65,15 +65,10 @@
             El precio del Producto es requerido.
           </div>
 
-          <div class="form-group">
-            <label>Imagen:</label>
-            <input formControlName="pictures" type="text" class="form-control" [class.is-invalid]="productForm.get('pictures').invalid && (productForm.get('pictures').dirty || productForm.get('pictures').touched)" 
-                  id="pictures">
-          </div>
-
-          <div *ngIf="productForm.get('pictures').invalid && (productForm.get('pictures').dirty || productForm.get('pictures').touched)" class="alert alert-danger">
-            La imagen del Producto es requerida.
-          </div> 
+          <app-file-input (validator)="onNotified($event)" [type]="'img'" [subtype]="'product'"></app-file-input>
+          <div *ngIf="validPicture == false && pictureTouched == true" class="alert alert-danger">
+            La imagen del producto es requerida.
+          </div>        
 
           <div class="form-group">
             <label class="custom-control custom-checkbox">
