--- a/src/app/menu/menu-modify/menu-modify.component.html
+++ b/src/app/menu/menu-modify/menu-modify.component.html
@@ -34,13 +34,13 @@
     
       <form #form="ngForm" method="post" novalidate>
 
-        <div class="form-group" *ngIf="canEdit === true">
+        <div class="form-group">
           <label>Nombre Carta:</label>
           <input #menuName="ngModel" required type="text" class="form-control" [class.is-invalid]="menuName.invalid && (menuName.dirty || menuName.touched)" name="menuName" 
                 id="menuName" [(ngModel)]="menu.name">
         </div>
 
-        <div class="form-group" *ngIf="canEdit === false">
+        <div class="form-group">
           <label>Nombre Carta:</label>
           <label>{{ menu.name }}</label>
         </div>
