Orders module - New Order

--- a/src/app/section/section-list/section-list.component.html
+++ b/src/app/section/section-list/section-list.component.html
@@ -2,7 +2,7 @@
 <div class="pageTitle">
   <div style="float: left">
       <header class="major">
-              <h5>Configuracion de secciones y mesas</h5>
+              <h5>{{ title }}</h5>
       </header>
   </div>
 </div>
