--- a/src/app/table/table-list/table-list.component.html
+++ b/src/app/table/table-list/table-list.component.html
@@ -4,17 +4,13 @@
   </div>
   <div class="modal-body">
     <div class="row pl-4">
-      <div class="float-left col-md-3 col-lg-3 col-sm-3">
-        <input type="number" class="form-control" [(ngModel)]="tableNumber" id="tableNumber" mdbActive>
-        <label for="tableNumber">Nro. de Mesa</label>
+      <div class="float-left">        
+        <label for="tableNumber">Nro. de Mesa: </label>
+        <label id="tableNumber" mdbActive> {{ selectedTable.number }}</label>
       </div>
     </div>
     <hr>
     <div class="row col-md-12 col-lg-12 col-sm-12 col-xs-12">
-      <div class="md-form form-group col-md-4 col-lg-4 col-sm-4 col-xs-4">
-        <input type="number" class="form-control" [(ngModel)]="qtyProd" id="prodQty" mdbActive>
-        <label for="prodQty">Cantidad de personas</label>
-      </div>
       <div class="col-md-8 col-lg-8 col-sm-8 col-xs-8">
         <mdb-completer style="width:100%!important;" (selected)="selectWaiter()" [label]="'Seleccionar Mozo'" name="autocomplete" [(ngModel)]="selectedWaiter" [datasource]="waitersList" [minSearchLength]="0"></mdb-completer>
       </div>
@@ -44,7 +40,11 @@
 <div class="container-fluid">  
   <div class="rounded z-depth-2 blue-grey lighten-4 fix" [ngGrid]="gridConfig">
     <div *ngFor="let box of boxes; let i = index" [(ngGridItem)]="box.config" (onItemChange)="updateItem(i, $event)" (onResize)="onResize(i, $event)" (onDrag)="onDrag(i, $event)">
-      <div class="handle z-depth-3 card accent-4 text-center hoverable" (click)="showOpenOrderModal(openNewOrderTemplate, box.id)" [class.green]="box.status === 'Libre'" [class.red]="box.status === 'Ocupada'" [class.yellow]="box.status === 'Comandada'" [class.blue]="box.status === 'Reservada'"> 
+      <div class="handle z-depth-3 card accent-4 text-center hoverable" (click)="showOpenOrderModal(openNewOrderTemplate, box.id)" 
+          [class.green]="box.status === 'Libre'" 
+          [class.red]="box.status === 'Ocupada'" 
+          [class.yellow]="box.status === 'Comandada'" 
+          [class.blue]="box.status === 'Reservada'"> 
       <div class="text-right customCloseCursor" style="position: static;"  *ngIf = "settingsActive === true" 
            (click)="showDeleteModal(deleteTemplate, box.id)">
         <span aria-hidden="true" class="close pr-2 mr-1 ml-1 pl-1 mt-1 mb-1 pb-1 pt-1">&times;</span>
@@ -55,10 +55,9 @@
       </div>
     </div>
   </div>
-<!-- Configuration Buttons -->
-<div class="fixed-action-btn" *ngIf = "ordersActive === true">
-  <a class="btn-floating btn-large red darken-1 waves-light" [routerLink]="['orderNew']" mdbRippleRadius><i class="fa fa-plus"></i></a>
 </div>
+</div>
+<!-- Configuration Buttons -->
 
 <div class="fixed-action-btn" style="bottom: 45px; right: 24px;" *ngIf = "settingsActive === true" (mouseleave)="fixed.toggle()">
 
