--- a/src/app/order/order-new/order-new.component.html
+++ b/src/app/order/order-new/order-new.component.html
@@ -33,7 +33,7 @@
 </ng-template>
 
 <ng-template #closeOrderTemplate>
-  <app-order-close></app-order-close>
+  <app-order-close [order]="order" (close)="closeModal()"></app-order-close>
 </ng-template>
 
 <div class="row pr-0 pl-0 mr-0 ml-0">
@@ -153,7 +153,7 @@
               </label>         
             </div>            
 
-            <div class="row" *ngIf="product.hasObservations === true">
+            <div class="row" *ngIf="product.observations !== undefined && product.observations !== ''">
               <textarea (click)="selectText(obs)" #obs [(ngModel)]="product.observations"></textarea>
             </div>
           </div>
@@ -192,7 +192,7 @@
               </button>
             </div>     
             <div class="row">
-              <div *ngIf="product.hasObservations === true">
+              <div *ngIf="product.observations !== undefined && product.observations !== ''">
                 {{ product.observations }}
               </div>
 
