--- a/src/app/order/order-close/order-close.component.html
+++ b/src/app/order/order-close/order-close.component.html
@@ -9,20 +9,138 @@
   </div>
 
   <!-- Cuerpo del form -->
-  <div class="row">
+  <div class="row" *ngIf="order.users[0].products !== null && order.users[0].products !== undefined && order.users[0].products.length > 0">
     <!-- Adiciones -->
     <div class="col-md-6">    
-      <div class="row">
-        {{ aditionsTitle }}
-      </div>  
+      <div class="col-md-12">
+        <div class="row">
+          {{ aditionsTitle }}
+        </div>  
+      </div>
 
-    </div>
-    <!-- Pago -->
-    <div class="col-md-6">
+      <div class="col-md-12" *ngFor="let product of order.users[0].products">
+        <div class="row" *ngIf="product.deleted === false">
+          <div>
+            <p>{{ product.quantity }}</p>
+          </div>
+
+          <div>
+            <li>
+                {{ product.name }}              
+            </li>  
+          </div>
+
+          <div>
+            <p>${{ product.price }} </p>  
+          </div>
+        </div> 
+      </div>
+
+      <!-- Mostrar descuento si hay alguno ingresado -->
+      <div class="row" *ngIf='order.discount !== undefined && order.discount !== null'>
+        <div class="col-md-12">
+          <div class="row">
+            <h6 class="float-left">Subtotal:</h6>
+            <h6 class="float-left">{{ order.discount.subtotal }}</h6>      
+          </div>
+  
+          <div class="row">
+            <h6 class="float-left">Descuento </h6>
+            <h6 class="float-left">{{ order.discount.discountRate }} %</h6> 
+            <label (click)="removeDiscount()" class="z-depth-0 btn customSizeY btn-tb btn-primary waves-effect waves-light float-left">
+              <p class="pb-0 mb-0"><i class="fa fa-times fa-1x"></i></p>
+            </label>       
+          </div>
+        </div>
+      </div>
+
+      <!--Total-->
       <div class="row">
-        {{ paymentsTitle }}
+        <h6 class="float-left">Total:</h6>
+        <h6 class="float-left">${{ order.totalPrice }}</h6>
       </div>
     </div>
+
+    <!-- Pago -->    
+    <div class="col-md-6">
+      <div class="col-md-12">
+        <div class="row">
+          {{ paymentsTitle }}
+                    
+          <label (click)="addPayment()" class="z-depth-0 btn customSizeY btn-tb btn-primary waves-effect waves-light float-left">
+            <p class="pb-0 mb-0"><i class="fa fa-plus fa-1x"></i></p>
+          </label> 
+        </div>  
+      </div>
+
+      <div class="row">
+        {{ partialPaidAmountLabel + ' $' + partialPaidAmount }} 
+      </div>
+
+      <div class="row">
+        <p>{{ cashRegisterLabel }}</p>
+        <mdb-select (selected)="getSelectedCashRegister($event)" [(ngModel)]="selectedCashRegister" 
+          [options]="cashRegistersSelect" placeholder="Choose your option">
+        </mdb-select>
+      </div>
+
+      <div class="col-md-12" *ngFor="let payment of usrOwner.payments">
+        <div class="row">
+          <mdb-select (selected)="getSelectedPaymentType($event)" [(ngModel)]="payment.methodId" 
+            [options]="paymentTypesSelect" placeholder="Choose your option">
+          </mdb-select>   
+          
+          <input type="number" class="form-control" [(ngModel)]="payment.amount" id="amount" (input)="calculateChangeAmount()" mdbActive>
+
+          <label (click)="removePayment(payment)" class="z-depth-0 btn customSizeY btn-tb btn-primary waves-effect waves-light float-left">
+            <p class="pb-0 mb-0"><i class="fa fa-times fa-1x"></i></p>
+          </label>  
+        </div>         
+      </div>
+
+      <!-- Ingresar descuento -->
+      <div class="float-left col 2" *ngIf='showDiscount===false && (order.discount === null || order.discount === undefined)'>
+        <button [disabled]="order.users[0].products.length === 0" type="button" class="z-depth-0 btn customSizeY btn-tb btn-primary waves-effect waves-light float-left" mdbRippleRadius (click)="showDiscountSection(true)"><i class="fa fa-percent fa-1x"></i></button>
+      </div> 
+
+      <div class="row" *ngIf='showDiscount===true'>
+        <form #formDiscount="ngForm" novalidate>
+          <div class="row">
+            <span> {{ discountRateLabel }}: </span>
+            <input type="number" class="form-control" [(ngModel)]="discountRate" name="discountRate" 
+              (input)="calculateAmount()"
+              (click)="selectText(rate)"
+              #rate
+              mdbActive>
+            <span>%</span>
+
+            <span>$</span>
+            <input type="number" class="form-control" [(ngModel)]="discountAmount" name="discountAmount"
+              (input)="calculateRate()" 
+              (click)="selectText(amount)"
+              #amount
+            mdbActive>
+          </div>
+          <div class="row">
+            <ul class="actions" align="center">
+              <li><input [disabled]="formDiscount.invalid" value="Confirmar" class="special" (click)="addDiscount()"/></li>
+              <li><input type="reset" value="Cancelar" (click)='showDiscountSection(false)' /></li>
+            </ul>
+          </div>
+        </form>
+      </div>
+
+      <!-- Vuelto -->
+      <div class="row">
+        <span>{{ changeLabel }}: </span>
+        <span>$</span>
+        <label>{{ changeAmount }}</label>
+      </div>
+    </div>   
+  </div>
+
+  <div class="row" *ngIf="order.users[0].products === null || order.users[0].products === undefined || order.users[0].products.length === 0">
+    {{ closeOrderWithoutAditions }}
   </div>
 
   <!-- Botones -->
@@ -30,7 +148,7 @@
     <div class="modal-footer">      
       <button type="button" class="button special" (click)="closeForm()">{{ cancelButton }}</button>
       <div class="float-right col-3">               
-        <button type="button" [disabled]="order.users[0].products.length === 0" class="customMarginButton float-right btn btn-sm btn-primary waves-light" mdbRippleRadius (click)="closeTable(closeOrderTemplate)">{{ closeTableButton + order.table }}</button>
+        <button type="button" class="customMarginButton float-right btn btn-sm btn-primary waves-light" mdbRippleRadius (click)="closeTable(closeOrderTemplate)">{{ closeTableButton + order.table }}</button>
       </div>
     </div>  
   </div>
