--- a/src/styles.scss
+++ b/src/styles.scss
@@ -286,3 +286,12 @@ width: 100%!important;
 	right: 0;
     z-index: 100;
 }
+.customNewOrder{
+    top:20%!important;
+    width: 20rem!important;
+}
+
+.customButtonCancel{
+    color:rgb(48, 47, 47)!important;
+    border: solid 1px rgb(175, 174, 174);
+}
