--- a/src/app/order/order-new/order-new.component.html
+++ b/src/app/order/order-new/order-new.component.html
@@ -36,8 +36,9 @@
   <app-order-close [order]="order" [cashRegisters]=cashRegisters [paymentTypes]=paymentTypes (close)="closeModal()"></app-order-close>
 </ng-template>
 
-<div class="row col-md-12 col-lg-12 col-sm-12 pr-0 pl-0 mr-0 ml-0">
-  <div class="d-flex flex-row flex-wrap col-md-8 col-lg-8 col-xs-8 col-sm-8" style="max-height:7rem;">
+<div class="row col-md-12 col-lg-12 col-sm-12 pr-0 pl-0 mr-0 ml-0" style="height: 87.5vh;
+overflow: auto;">
+  <div class="d-flex flex-row flex-wrap col-md-8 col-lg-8 col-xs-8 col-sm-8 pr-0" style="height: 100%">
     <div class="row col-12 menusContainer pr-0 pl-0">
       <div class="d-flex align-items-center pr-0 pl-0 pb-0 pt-0 mr-0 ml-0 mt-0 mb-0">
         <div *ngFor="let menu of menus" class="d-flex align-items-center menuButtonContainer">
@@ -45,43 +46,40 @@
         </div>          
       </div>
       <div class="paddles">
-          <button class="left-paddle paddle" style="left:0!important;">
+          <button class="left-paddle paddle btn customPaddle waves-light" mdbRippleRadius style="left:0!important;">
             <
           </button>
-          <button class="right-paddle paddle">
+          <button class="right-paddle paddle btn customPaddle waves-light" mdbRippleRadius>
             >
           </button>
       </div>
     </div>
-    <div class="row categoriesAndProductsContainer">
-      <div class="col-2 categoriesContainer customScrollBar pr-0 pl-0 pb-0 pt-0 mr-0 ml-0 mt-0 mb-0">
+    <div class="row col-12 pr-0 pl-0 categoriesAndProductsContainer">
+      <div class="col-3 categoriesContainer customScrollBar pr-0 pl-0 pb-0 pt-0 mr-0 ml-0 mt-0 mb-0">
         <div class="d-flex flex-wrap align-items-center justify-content-center categoryButtonContainer" *ngFor="let category of categories">
           <a (click)="getProductsByCategory(category._id)" class="d-flex align-items-center justify-content-center btn btn-primary btn-md waves-light categoryButton" mdbRippleRadius><span>{{category.name}}</span></a>
         </div>
       </div>
-      <div class="d-flex flex-wrap col-9 productsContainer customScrollBar pr-0 pl-0 pb-0 pt-0 mr-0 ml-0 mt-0 mb-0">
+      <div class="col-9 d-flex flex-wrap col-9 productsContainer customScrollBar pr-0 pl-0 pb-0 pt-0 mr-0 ml-0 mt-0 mb-0">
         <div class="productsButtonContainer" *ngFor="let product of products">
           <a (click)="addProductToPreOrder(product, 1)" class="d-flex align-items-center justify-content-center btn btn-primary btn-md waves-light productButton" mdbRippleRadius><span>{{product.name}}</span></a>
         </div>
       </div>
     </div>
   </div>
-  <div class="col-md-4 col-lg-4 col-xs-4 col-sm-4" style="height:100%">
-    <div class="row pl-4">
-      <div class="float-left col-md-3 col-lg-3 col-sm-3">
+  <div class="col-md-4 col-lg-4 col-xs-4 col-sm-4 pl-0 pr-0">
+    <div class="row col-lg-12 col-md-12 col-sm-12 secondary-color customTextColor">
+      <div class="row col-lg-12 col-md-12 col-sm-12">
         <h5>Mesa {{order.table}}</h5>
+      </div>
+      <div class="row col-lg-12 col-md-12 col-sm-12 customSubtittle">
+        {{ order.created_at | date:'dd/MM/yy HH:mm' }}
       </div>
     </div>
 
     <hr>
-
-    <div class="row pl-4">
-      <h6>{{ order.created_at | date:'dd/MM/yy HH:mm' }}</h6>
-    </div>
-
-    <hr>
     
-    <div class="row pl-4">
+    <div class="pl-4">
         <h6>Adicionar</h6>
     </div>
     
@@ -198,7 +196,7 @@
     </div>
 
     <!--Total-->
-    <div class="row">
+    <div class="">
       <h6 class="float-left">Total:</h6>
       <h6 class="float-left">${{ order.totalPrice }}</h6>
     </div>
