--- a/src/app/order/order-new/order-new.component.scss
+++ b/src/app/order/order-new/order-new.component.scss
@@ -1,8 +1,8 @@
 .menusContainer{
     width: 100%;
     overflow-x: hidden!important;
-    height: 65%;
-    background-color:blue;
+    height: 12%;
+    background-color:rgba(244, 67, 54, 0.3);
     top: 0;
     bottom: 0;
     left: 0;
@@ -25,11 +25,12 @@
 }
 .categoriesAndProductsContainer{
     overflow: hidden!important;
+    height: 88%;
 }
 .categoriesContainer{
-    background-color: yellow;
-    height:35rem;
-    min-width:13rem;
+    background-color: rgba(244, 67, 54, 0.2);
+    height:100%;
+    //min-width:13rem;
     overflow-y: scroll;
 }
 
@@ -48,9 +49,9 @@
 }
 
 .productsContainer{
-    background-color: red;
-    height: 35rem;
-    width: 41.6rem;
+    background-color: rgba(244, 67, 54, 0.1);
+    height: 100%;
+    width: 45%;
     overflow-y: scroll;
 }
 
@@ -84,4 +85,17 @@
 .customScrollBar::-webkit-scrollbar-thumb {
     border-radius: 3px;
     -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
+}
+
+.customPaddle{
+    background-color: rgba(0, 0, 0, 0.207);
+    border: none;
+}
+
+.customSubtittle{
+    font-size: 80%!important;
+}
+
+.customTextColor{
+    color:#4B515D!important;
 }
