Aplico estilos a orderNew y cambio el nombre en la navbar

--- a/src/app/order/order-new/order-new.component.scss
+++ b/src/app/order/order-new/order-new.component.scss
@@ -99,3 +99,30 @@
 .customTextColor{
     color:#4B515D!important;
 }
+
+.customTableNumberTitle{
+    height: 12%;
+    padding-left: .5rem;
+    padding-top: .5rem
+}
+
+.customPreOrderAdition{
+    padding-top:.5rem;
+    padding-left: 2rem!important;
+    padding-right: 2rem;
+    padding-bottom: .5rem;
+}
+
+.customProductInputName{
+    width: 10rem!important;
+    height: 2.5rem!important;
+    overflow: hidden;
+}
+
+.customProductShowingName{
+    width: 20rem!important;
+    height: 2.5rem!important;
+    overflow: hidden;
+    margin-left: .75rem;
+    margin-right: .75rem;
+}
