--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
 	<div class="containter-fluid customMB">
 	<mdb-navbar SideClass="navbar fixed-top navbar-expand-lg navBarColor pr-0" [containerInside]="false">
 		<logo>
-			<a class="logo navbar-brand pl-4" href="#"><strong>WebBar</strong></a>
+			<a class="logo navbar-brand pl-4" href="#"><strong>BonApp</strong></a>
 		</logo>
 		<links>
 			<ul class="navbar-nav mr-auto">
