--- a/src/app/order/order-new/order-new.component.html
+++ b/src/app/order/order-new/order-new.component.html
@@ -68,7 +68,7 @@ overflow: auto;">
     </div>
   </div>
   <div class="col-md-4 col-lg-4 col-xs-4 col-sm-4 pl-0 pr-0">
-    <div class="row col-lg-12 col-md-12 col-sm-12 secondary-color customTextColor">
+    <div class="row secondary-color customTextColor customTableNumberTitle">
       <div class="row col-lg-12 col-md-12 col-sm-12">
         <h5>Mesa {{order.table}}</h5>
       </div>
@@ -77,11 +77,7 @@ overflow: auto;">
       </div>
     </div>
 
-    <hr>
-    
-    <div class="pl-4">
-        <h6>Adicionar</h6>
-    </div>
+    <div class="row col-lg-12 col-md-12 col-sm-12 pt-1 pb-2">Adicionar</div>
     
     <div class="row col-md-12 col-lg-12 col-sm-12 col-xs-12">
       <div class="md-form form-group col-md-2 col-lg-2 col-sm-2 col-xs-2">
@@ -94,7 +90,7 @@ overflow: auto;">
     </div>
     
     <!-- Listado de productos en pre order -->
-    <div class="row pl-2 customDivHeight" *ngIf='preOrderProducts && preOrderProducts.length'>
+    <div class="row pl-2 customDivHeight customPreOrderAdition" *ngIf='preOrderProducts && preOrderProducts.length'>
       <ul class="list-group">
         <div class="btn-group customProductMargin row" *ngFor="let product of preOrderProducts" data-toggle="buttons">
           <div class="col-md-12">
@@ -102,24 +98,24 @@ overflow: auto;">
               <label (click)="updateProductQty(product, -1)" class="z-depth-0 btn customSizeY btn-tb btn-primary waves-effect waves-light float-left">
                 <p class="pb-0 mb-0">-</p>
               </label>
-
-              <p>{{ product.quantity }}</p>
+              
+              <p class="pt-1 pr-2 pl-2">{{ product.quantity }}</p>
 
               <label (click)="updateProductQty(product, 1)" class="z-depth-0 customSizeY btn btn-tb btn-primary waves-effect waves-light float-right pt-2">
                 <p class="pb-0 mb-0">+</p>
               </label>
 
-              <li class="list-group-item d-flex customSize customSizeY justify-content-between align-items-center pb-1 pt-0">
+              <li class="list-group-item customProductInputName ml-2">
                   {{ product.name }}            
               </li>  
 
-              <p>$ {{ product.price }} </p>  
+              <p class="pl-1 pr-1">$ {{ product.price }} </p>  
 
-              <label (click)="showObservationBox(product)" class="z-depth-0 btn customSizeY btn-tb btn-primary waves-effect waves-light float-left">
+              <label (click)="showObservationBox(product)" class="z-depth-0 btn customSizeY btn-tb btn-primary waves-effect waves-light float-left mr-1 ml-1">
                 <p class="pb-0 mb-0"><i class="fa fa-comment fa-1x"></i></p>
               </label> 
               
-              <label (click)="removeProductFromPreOrder(product)" class="z-depth-0 btn customSizeY btn-tb btn-primary waves-effect waves-light float-left">
+              <label (click)="removeProductFromPreOrder(product)" class="z-depth-0 btn customSizeY btn-tb btn-primary waves-effect waves-light float-left mr-1 ml-1">
                 <p class="pb-0 mb-0"><i class="fa fa-times fa-1x"></i></p>
               </label>         
             </div>            
@@ -130,15 +126,15 @@ overflow: auto;">
           </div>
         </div>        
       </ul>
-
-      <p>Total a confirmar: {{ totalToConfirm }}</p>
-
-      <div class="float-right col-md-8 col-lg-8 col-sm-8">
-        <button type="button" class="float-right btn btn-sm btn-primary waves-light" mdbRippleRadius (click)="cancelPreOrder()" >Cancelar</button>
-      </div>  
-      <div class="float-right col-md-8 col-lg-8 col-sm-8">
-        <button type="button" class="customMarginButton float-right btn btn-sm btn-primary waves-light" mdbRippleRadius (click)="confirmPreOrder()" >Confirmar</button>
-      </div> 
+      <div class="row col-12">Total a confirmar: {{ totalToConfirm }}</div>
+      <div class="row col-12 pr-0">
+        <div class="float-left col-md-6 col-lg-6 col-sm-6">
+          <button type="button" class="float-left btn btn-sm btn-primary waves-light" mdbRippleRadius (click)="cancelPreOrder()" >Cancelar</button>
+        </div>  
+        <div class="float-right col-md-6 col-lg-6 col-sm-6 pr-0">
+          <button type="button" class="float-right btn btn-sm btn-primary waves-light" mdbRippleRadius (click)="confirmPreOrder()" >Confirmar</button>
+        </div> 
+      </div>
     </div>
 
     <!-- Listado de productos en order -->
@@ -149,11 +145,11 @@ overflow: auto;">
             <div class="row">
               <p>{{ product.quantity }}</p>
 
-              <li class="list-group-item d-flex customSize customSizeY justify-content-between align-items-center pb-1 pt-0">
+              <li class="list-group-item customProductShowingName pb-1 pt-0">
                   {{ product.name }}              
               </li>  
 
-              <p>$ {{ product.price }} </p>  
+              <p class="mr-1">$ {{ product.price }} </p>  
               
               <button 
                 type="button" 
@@ -168,7 +164,7 @@ overflow: auto;">
                 {{ product.observations }}
               </div>
 
-              <div *ngIf="product.deleted === true">
+              <div class="pl-4" *ngIf="product.deleted === true">
                 <p> - CANCELADO: {{ product.deletedReason }} </p>
               </div>
             </div>
@@ -196,15 +192,13 @@ overflow: auto;">
     </div>
 
     <!--Total-->
-    <div class="">
-      <h6 class="float-left">Total:</h6>
-      <h6 class="float-left">${{ order.totalPrice }}</h6>
+    <div class="mt-2">
+      <h6 class="float-left pt-2">Total: </h6>
+      <h6 class="float-left pt-2"> ${{ order.totalPrice }}</h6>
     </div>
-
-    <div class="row">      
-      <div class="float-right col-3">               
+      
+      <div class="col-3 float-right mt-2">               
         <button type="button" class="customMarginButton float-right btn btn-sm btn-primary waves-light" mdbRippleRadius (click)="closeTable(closeOrderTemplate)">Cerrar Mesa</button>
       </div>
-    </div>
   </div>
 </div>
